--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target node",
-    "prepublish": "bun run build",
-    "start": "bun src/index.ts"
+    "prepublish": "bun run build && bun run web:build",
+    "transfer": "bun src/index.ts transfer",
+    "start:explorer": "bun src/index.ts explorer",
+    "build:explorer": "vite build"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^20.10.0"
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "vite": "^6.3.5",
+    "vue": "^3.5.14"
   },
   "dependencies": {
     "@polkadot/api": "^16.0.1",
     "@polkadot/types": "^16.0.1",
     "@polkadot/types-codec": "^16.0.1",
-    "commander": "^14.0.0"
+    "commander": "^14.0.0",
+    "svelte": "^4.2.7",
+    "sirv": "^2.0.3"
   },
   "peerDependencies": {
     "typescript": "^5"
