--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^20.10.0",
+    "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.2.4",
     "vite": "^6.3.5",
     "vue": "^3.5.14"
@@ -23,9 +23,17 @@
     "@polkadot/api": "^16.0.1",
     "@polkadot/types": "^16.0.1",
     "@polkadot/types-codec": "^16.0.1",
+    "@tailwindcss/vite": "^4.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "commander": "^14.0.0",
+    "lucide-vue-next": "^0.511.0",
+    "reka-ui": "^2.2.1",
+    "sirv": "^2.0.3",
     "svelte": "^4.2.7",
-    "sirv": "^2.0.3"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0"
   },
   "peerDependencies": {
     "typescript": "^5"
