feat: add shadcn ui

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@polkadot/types": "^16.0.1",
     "@polkadot/types-codec": "^16.0.1",
     "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/core": "^13.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commander": "^14.0.0",
