--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@polkadot/api": "^16.0.1",
     "@polkadot/types": "^16.0.1",
-    "@polkadot/types-codec": "^16.0.1"
+    "@polkadot/types-codec": "^16.0.1",
+    "sucrase": "^3.35.0"
   },
   "peerDependencies": {
     "typescript": "^5"
