--- a/packages/explorer/package.json
+++ b/packages/explorer/package.json
@@ -23,6 +23,7 @@
     "reka-ui": "^2.2.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.3.0"
+    "tw-animate-css": "^1.3.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
